<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_chip_group"
        android:hint="@string/search"
        app:endIconDrawable="@drawable/ic_wikipedia"
        app:endIconMode="custom"
        app:helperText="@string/wiki_helper"
        app:layout_constraintTop_toBottomOf="@id/progress_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout">

        <com.ortiz.touchview.TouchImageView
            android:id="@+id/img_photo_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_chip_group"
            android:contentDescription="@string/photo_of_the_day"
            android:src="@drawable/nasa"
            app:layout_behavior=".view.behaviors.ImageViewBehavior" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_bottom_sheet"
            android:background="@drawable/background_bottom_sheet"
            app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <View
                android:id="@+id/bottomSheetLine"
                android:layout_width="@dimen/width_bottom_sheet_icon"
                android:layout_height="@dimen/height_bottom_sheet_icon"
                android:layout_marginTop="@dimen/margin_top_bottom_sheet_icon"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_nested_scroll_bottom_sheet"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/bottomSheetLine">

                <TextView
                    android:id="@+id/tv_photo_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_chip_group"
                    tools:text="@string/large_text" />

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/actionMatrix"
            android:layout_width="@dimen/width_matrix_icon"
            android:layout_height="@dimen/width_matrix_icon"
            app:cardCornerRadius="@dimen/corner_radius_card_icon_matrix"
            app:layout_behavior=".view.behaviors.IconMatrixBehavior">

            <ImageView
                android:id="@+id/img_user_neo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_image_icon_matrix"
                android:src="@drawable/user" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>